--- a/evergreen/config.yml
+++ b/evergreen/config.yml
@@ -35,9 +35,9 @@ tasks:
         cd build
         ../cmake_binaries/bin/cmake \
           -DREALM_BUILD_COMMANDLINE_TOOLS=On \
+          -DREALM_ENABLE_ENCRYPTION=On \
+          -DREALM_ENABLE_SYNC=On \
           -DCMAKE_EXPORT_COMPILE_COMMANDS=On \
-          -DCMAKE_ENABLE_ENCRYPTION=On \
-          -DCMAKE_ENABLE_SYNC=On \
           -DCMAKE_C_COMPILER=${c_compiler|clang} \
           -DCMAKE_CXX_COMPILER=${cxx_compiler|clang++} \
           ..
