--- a/src/realm/CMakeLists.txt
+++ b/src/realm/CMakeLists.txt
@@ -350,8 +350,10 @@ if(UNIX AND NOT APPLE)
             )
         endif()
         if(EXISTS /usr/lib/libcrypto.a AND /usr/lib/libssl.a)
-			file(COPY /usr/lib/libcrypto.a /usr/lib/libssl.a DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/openssl/lib)
-		endif()
+		message(STATUS "Overwriting downloaded openssl with locally installed")
+		file(REMOVE "${CMAKE_CURRENT_BINARY_DIR}/openssl/lib/libcrypto.a" "${CMAKE_CURRENT_BINARY_DIR}/openssl/lib/libssl.a")
+		file(COPY "/usr/lib/libcrypto.a" "/usr/lib/libssl.a" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/openssl/lib")
+	endif()
         set(OpenSSL_DIR "${CMAKE_CURRENT_BINARY_DIR}/openssl/lib/cmake/OpenSSL")
     endif()
     find_package(OpenSSL REQUIRED CONFIG)
